# dRICH-MOBO

./: .gitignore  README.md  conda_requirements.txt  environment.yml  klm-mobo-documentation.md  panda_variables.sh  pip_requirements.txt  pyproject.toml  requirements_fixed.txt  setup_panda.sh
MOBO-tools/: README.md  build_eicrecon.sh  build_epic.sh  build_irt.sh  command  detector_geometry.root  eic-shell  gs_model.pkl  load_epic.sh  mobo_analysis-checkpoint.ipynb  mobo_analysis.ipynb  mobo_scratch.ipynb  optimize.config  optimize_big.config  optimize_dev.config  optimize_template.config  parameters.config  parameters_2mirror.config  run_grid.py  run_optimization.sh  setup.sh  setup_for_panda.sh  setup_new.sh  setup_wen.sh  temp_secrets.key  test_scheduler_df.csv  test_scheduler_df_20.csv  test_scheduler_df_50.csv  test_scheduler_df_50_march_16.csv  test_scheduler_experiment.json  wrapper.py  wrapper_panda_idds.py  wrapper_slurm_basic.py
MOBO-tools/Experiment_high_mu_energy_may_10/: gs_model.pkl  test_scheduler_df.csv  test_scheduler_experiment.json
MOBO-tools/Fixed_mu_pi_apr_28/: gs_model.pkl  test_scheduler_df.csv  test_scheduler_experiment.json
MOBO-tools/ProjectUtils/: Monitoring.py  checkSlurmStatus.sh  edittextfile.py  local_utilities.py  metric_utilities.py  mobo_utilities.py  panda_idds_utilities.py  panda_idds_utilities_multi_steps.py  panda_idds_utilities_parallel.py  runner_utilities.py  slurm_utilities.py
MOBO-tools/iframe_figures/: figure_12.html  (+30 more)
tools/: build.sh  conda_requirements.yml  conda_requirements.yml.back  install.sh  setup_dev.sh
(+101 files in other folders)
