[project]
name = "drich-mobo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "ax-platform==0.4.0",
    "matplotlib>=3.10.1",
    "numpy<2.0.0",
    "sqlalchemy<2.0.0",
    "uncertainties>=3.2.2",
    "uproot>=5.6.0",
    "wandb>=0.19.8",
]
